--- a/RGR Case Study - 280120.ipynb
+++ b/RGR Case Study - 280120.ipynb
@@ -4208,9 +4208,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -4273,9 +4271,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -4522,14 +4518,33 @@
    "metadata": {},
    "source": [
     "#### Analysis\n",
-    "Due to time constraints, I've decided to summarise this graphs in a few short lined and not go into the level of detail of analysis as per [Section 5.3](#section5.3). All the graphs have produced though for reference.\n",
+    "As per Section 5.3, all analysis focuses on the Referral Acquisition Channel, comparing this to the other channels. Each of the five previous plots has a written paragraph, interpreting the results.\n",
     "\n",
-    "Generally, as per the analysis in [Section 5.3](#section5.3), we can see that the Riders from Roo York and Roo de Janeiro, average more hours, deliver a greater average number of deliveries and have a higher throughput. We can also see in both these places, these Riders go on to have a greater number of Referrals and Successful Referrals.\n",
+    "##### Plot 1: Average No. of Hours Worked per Rider by Acquisition Channel\n",
+    "...\n",
     "\n",
-    "Of course, as stated in Section 8.1.1, no Riders came to Deliveroo through the RGR scheme in Roo Town and therefore there is no data regarding such Riders performance.\n",
+    "\n",
+    "##### Plot 2: Average No. of Orders Delivered per Rider by Acquisition Channel\n",
+    "...\n",
     "\n",
     "\n",
-    "#### Outstanding Questions and Conclusion:\n",
+    "##### Plot 3: Throughput per Rider by Acquisition Channel\n",
+    "...\n",
+    "\n",
+    "\n",
+    "##### Plot 4: Average No. of Referrals per Rider by Acquisition Channel\n",
+    "...\n",
+    "\n",
+    "\n",
+    "##### Plot 5: Average No. of Successful Referrals per Rider by Acquisition Channel\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Outstanding questions:\n",
     "*    Was a stratified sample used? I.e. are the totals of riders in each location truely representative of the Deliveroo rider fleet? Can we an equal number of riders in each location/a better representation?\n",
     "*    Can we get data for other locations? Deliveroo operates in over 200 cities currently. Do we have data for these other cities? How many cities uses an RGR scheme? Geography clearly plays an important role in the analysis of the data, how can we improve the data used?"
    ]
@@ -5698,16 +5713,31 @@
    "metadata": {},
    "source": [
     "#### Analysis\n",
-    "Due to time constraints, I've decided to summarise this graphs in a few short lined and not go into the level of detail of analysis as per [Section 5.3](#section5.3). All the graphs have produced though for reference.\n",
+    "As per [Section 5.3](#section5.2), all analysis focuses on the Referral Acquisition Channel, comparing this to the other channels. Each of the five previous plots has a written paragraph, interpreting the results.\n",
     "\n",
-    "The performance of the RGR Riders (average hours, average number of deliveries, throughput) relative to other channels varies depending on the vehicle they are using. Generally, RGR riders place around 3rd for the Riders with Bicycles behind Organic, Job Platforms and is often close to the performance of that of Digital. However, for Scooter and Motorcycle Riders, Referral Riders tend to place first regarding performance, ahead of Offline in 2nd and Organic in 3rd.\n",
+    "##### Plot 1: Average No. of Hours Worked per Rider by Acquisition Channel\n",
+    "...\n",
     "\n",
-    "Generally, for Bicycle Riders, they are more likely to go on and refer more Riders, placing 2nd for number of Referrals and well out in the lead for the number of successful referrals. For Scooter and Motor Cycle Riders, RGR Riders places 2nd for No. of Referrals behind Offline, but places first for number of Successful Referrals, therefore having a much greater conversion rate. We can see that none of the Motor Vehicle Riders went on to Recommend or Successfully Recommend Riders. Maybe this is the reason as to why the dataset for Motor Vehicle Riders was so small in the first place? Maybe this small sample size is truely representative of the the real situation. Maybe more needs to be done to promote Riders to work to Deliveroo who own cars.\n",
+    "\n",
+    "##### Plot 2: Average No. of Orders Delivered per Rider by Acquisition Channel\n",
+    "...\n",
     "\n",
     "\n",
-    "#### Outstanding Questions and Conclusion:\n",
-    "*    Was the sample size of Riders with Motor Vehicles too small to include RGR Riders? Or are Motor Vehicles RIders less like to go on a recommend Riders? We can see that none of the Motor Vehicle Riders went on to Recommend or Successfully Recommend Riders. Maybe this is the reason as to why the dataset for Motor Vehicle Riders was so small in the first place? Maybe this small sample size is truely representative of the the real situation. Maybe more needs to be done to promote Riders to work to Deliveroo who own cars.\n",
-    "*    Again, as per the analysis of Location, was a stratified sample used? I.e. are the totals of riders in each location truely representative of the Deliveroo rider fleet? Can we an equal number of riders for each Vehicle type produce better representation?"
+    "##### Plot 3: Throughput per Rider by Acquisition Channel\n",
+    "...\n",
+    "\n",
+    "\n",
+    "##### Plot 4: Average No. of Referrals per Rider by Acquisition Channel\n",
+    "...\n",
+    "\n",
+    "\n",
+    "##### Plot 5: Average No. of Successful Referrals per Rider by Acquisition Channel\n",
+    "...\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Conclusions\n",
+    "..."
    ]
   },
   {
@@ -5844,13 +5874,12 @@
    "source": [
     "Other avenues for analysis\n",
     "*    I would repeat the analysis, this time removing any locations such as Roo Town where there are no RGR Riders to remove selection bias.\n",
-    "*    Was the sample size of Riders with Motor Vehicles too small to include RGR Riders? Or are Motor Vehicles RIders less like to go on a recommend Riders? We can see that none of the Motor Vehicle Riders went on to Recommend or Successfully Recommend Riders. Maybe this is the reason as to why the dataset for Motor Vehicle Riders was so small in the first place? Maybe this small sample size is truely representative of the the real situation. Maybe more needs to be done to promote Riders to work to Deliveroo who own cars.\n",
     "*    I would like to go back and readdress the question in [Section 5.1](#section5.1), 'How do you define a successful scheme?' This I believe is the section most open to debate and the area in the real-world, with a real data set, is the hardest to judge.\n",
     "*    Regarding expanding the analysis ofthe current data set, one idea to potentially bucket riders by `APPLICATION_DATE`, `APPLICATION_APPROVED_DATE`, `FIRST_WORK_DATE` and conduct analysis again. Maybe at certain times of year Riders with certain application times/first work times perform differently i.e. maybe September is a month of greater intake for students as this is the beginning of the academy/university year and they may behave in a certain way.\n",
     "*    In this analysis I've only looked at the final cumulation metrics of the Riders. It would be interesting and look at the performance of the Riders over time as a timeline. Does their performance of certain metrics change during the 24 week cycle?\n",
-    "*    Can the data set be increased to more than 24 weeks? What is the average length of time a Rider works for Deliveroo. Is 24 weeks a sufficient enough period to analysis RGR performance?\n",
+    "*    Can the data set be increased to more than 24 weeks? What is the average length of time a Rider works for Deliveroo. Is 24 weeks a sufficient enoguh period.\n",
     "*    This dataset is from 3 countries, from which we know nothing about other than name. Deliveroo works in > 200 citires. Do we have data for the other 200+ cities to gain a better understanding and create a 'truer' data set? How many cities uses an RGR scheme? Geography clearly plays an important role in the analysis of the data, how can we improve the data used?\n",
-    "*    Was a stratified sample used? I.e. are the totals of riders in each location truely representative of the Deliveroo rider fleet? `LOCATION` and `VEHICLE_TYPE` were just example of features that need to be controlled when sampling a data set. Can we improve on the dataset we already have>?"
+    "*    Was a stratified sample used? I.e. are the totals of riders in each location truely representative of the Deliveroo rider fleet? Location and City type were just example of features that need to be controlled when sampling a data set. Can we improve on the dataset we already have>?"
    ]
   },
   {
@@ -5945,7 +5974,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
